[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tpulse"
authors = [{name = "Semenov Artur", email = "juicehq@yandex.ru"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [ "httpx >= 0.21.1", "fake_useragent >= 0.1.11"]

[project.urls]
Home = "https://github.com/meanother/tpulse-py"